--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #ffffff;
+    background-color: #fff;
     width: 800px;
     margin: 0 auto;
 }
 
 h1 {
     font-family: 'Lobster', cursive;
-    font-size: 70pt;
-    line-height: 35pt;
+    font-size: 80px;
+    line-height: 35px;
     padding-bottom: 25px;
     color: aquamarine;
     text-align: center;
@@ -31,54 +31,54 @@ nav {
 }
 
 h3,
-.top-nav {
+.top-nav a {
     font-weight: 700;
 }
 
 p,
 ul,
-social-nav {
+.social-nav a {
     font-weight: 400;
 }
 
 nav {
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #000;
+    color: #fff;
     padding: 10px 0px 10px 0px;
 }
 
-.top-nav,
-.social-nav {
-    color: #ffffff;
+.top-nav a,
+.social-nav a {
+    color: #fff;
     text-decoration: none;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-.top-nav:hover,
-.social-nav:hover {
+.top-nav a:hover,
+.social-nav a:hover {
     color: aquamarine;
 }
 
-.top-nav {
-    font-size: 12pt;
+.top-nav a {
+    font-size: 16px;
 }
 
-.social-nav {
-    font-size: 8pt;
+.social-nav a {
+    font-size: 14px;
 }
 
 p,
 ul {
-    font-size: 11pt;
-    line-height: 14pt;
+    font-size: 14px;
+    line-height: 18px;
 }
 
 #about-me-container {
     height: 200px;
     width: 100%;
     padding: 10px 0px 10px 0px;
-    background-color: aquamarine;
+    background: aquamarine;
 }
 
 #about-me {
